--- a/client/main.css
+++ b/client/main.css
@@ -1,18 +1,13 @@
-#stage
-{
-    position: relative;
+.caseStyle {
+  width:100px;
+  height:100px;
+  border:2px solid black;
+  background-color:red;
+  display:inline-block;
+  margin:10px;
 }
 
-.cell
-{
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    border: 1px solid black;
-    background-color: white;
-}
-
-.cell:hover
-{
-    background-color: grey;
+img {
+  width:100%;
+  height:100%;
 }
