--- a/client/main.css
+++ b/client/main.css
@@ -1,3 +1,11 @@
+body {
+
+}
+#case {
+  min-width: 1400px;
+  max-width: 1400px;
+  float: right;
+}
 .caseStyle {
   width:100px;
   height:100px;
@@ -11,3 +19,4 @@ img {
   width:100%;
   height:100%;
 }
+
