--- a/client/main.css
+++ b/client/main.css
@@ -1,18 +1,28 @@
 body {
 
 }
+.HUD {
+  border: 1px solid black;
+
+}
+#throwDice img {
+  width: 200px;
+  height: 200px;
+  border: none;
+
+}
 #case {
-  min-width: 1400px;
-  max-width: 1400px;
-  float: right;
+  min-width: 1100px;
+  max-width: 1100px;
+
 }
 .caseStyle {
-  width:100px;
-  height:100px;
+  width:90px;
+  height:90px;
   border:2px solid black;
   background-color:red;
   display:inline-block;
-  margin:10px;
+  margin:5px;
 }
 
 img {
