--- a/client/main.css
+++ b/client/main.css
@@ -1,6 +1,13 @@
+body {
+  font-family: "Press Start 2P", cursive;
+  font-size: 0.67em;
+  margin: 0;
+  margin-top: 9em;
+}
+
 #throwDice img {
-  width: 200px;
-  height: 200px;
+  width: 100px;
+  height: 100px;
   border-radius: 100%;
 }
 
@@ -9,36 +16,100 @@
   animation: shake 0.5s;
   /* When the animation is finished, start again */
   animation-iteration-count: infinite;
-  }
-  
-  @keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
-  } 
-#case {
-  min-width: 1100px;
-  max-width: 1100px;
 }
+
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
+}
+
+#case {
+  min-width: 1150px;
+  max-width: 1200px;
+}
+
+#case0 {
+  border: 4px solid hotpink;
+}
+
+#case58 {
+  border: 4px solid cyan;
+}
+
 .caseStyle {
-  width:90px;
-  height:90px;
-  border:2px solid black;
-  background-color:red;
-  display:inline-block;
-  margin:5px;
+  width: 100px;
+  height: 100px;
+  border: 4px solid rgba(255, 255, 255, 0);
+  display: inline-block;
 }
 
 img {
-  width:100%;
-  height:100%;
+  width: 100%;
+  height: 100%;
 }
 
+.HUD {
+  border: 8px solid rgba(0, 0, 0, 0.5);
+  padding: 0 5px;
+  text-align: center;
+  margin-right: 5px;
+}
+span {
+  color: red;
+}
+#resultDice {
+  padding: 10px 0;
+}
+.player1 {
+  color: hotpink;
+}
+.player2 {
+  color: rgba(116, 251, 253, 1);
+}
+.container {
+  display: flex;
+}
+#resultDice {
+  text-align: center;
+  width: 230px;
+}
+#throwDice {
+  display: flex;
+  justify-content: center;
+}
+#throwDice img {
+  width: 100px;
+  height: 100px;
+  margin: 2px 0;
+}
