--- a/client/main.css
+++ b/client/main.css
@@ -2,10 +2,14 @@ body {
   font-family: "Press Start 2P", cursive;
   font-size: 0.67em;
   margin: 0;
-  margin-top: 9em;
+  margin-top: 2em;
   background-color: black;
 }
-
+#titre {
+  color : white;
+  text-align: center;
+  padding-bottom: 1em;
+}
 #throwDice img {
   width: 100px;
   height: 100px;
@@ -43,7 +47,7 @@ body {
   border: 4px solid hotpink;
 }
 
-#case58 {
+#case59 {
   border: 4px solid cyan;
 }
 
@@ -68,11 +72,23 @@ img {
   text-align: center;
   margin-right: 5px;
   color: white;
+  width: 220px;
+  height: 656px;
+  overflow: hidden;
 }
 
 span {
-  color: red;
+  color: hotpink;
 }
+
+#number {
+  display: flex;
+  justify-content: center;
+  margin-top: -20px;
+  font-size: 18px;
+  text-shadow: 3px 3px #1515ea;
+}
+
 #resultDice {
   padding: 10px 0;
 }
@@ -99,16 +115,10 @@ span {
   margin: 2px 0;
 }
 
+#message {
+width: 100%;
+}
+
 #case {
   border: solid lime 4px;
 }
-
-/*#case1, #case2, #case3, #case4, #case5, #case6, #case7, #case8 {
-  border-top: solid red 10px;
-}
-
-#case9, #case, #case, #case, #case, #case, #case, #case13, #case, #case {
-  border-left: solid red 10px;*/
-}
-
-#case9, #case, #case, #case, #case, #case, #case, #case, #case, #case
