--- a/client/main.css
+++ b/client/main.css
@@ -16,6 +16,10 @@ body {
   border-radius: 100%;
 }
 
+audio {
+  color: red;
+}
+
 #throwDice img:hover {
   /* Start the shake animation and make the animation last for 0.5 seconds */
   animation: shake 0.5s;
@@ -100,6 +104,7 @@ span {
 }
 .container {
   display: flex;
+  margin-bottom: 50px;
 }
 #resultDice {
   text-align: center;
