--- a/client/main.css
+++ b/client/main.css
@@ -2,14 +2,25 @@ body {
   font-family: "Press Start 2P", cursive;
   font-size: 0.67em;
   margin: 0;
-  margin-top: 9em;
+  margin-top: 2em;
   background-color: black;
 }
-
+#titre {
+  color : hotpink;
+  text-align: center;
+  margin-bottom: 0;
+  padding-top: 10px;
+  text-shadow: 3px 3px #1515ea;
+}
 #throwDice img {
   width: 100px;
   height: 100px;
   border-radius: 100%;
+}
+
+#blopblop {
+  color: red;
+  margin-left: 75px;
 }
 
 #throwDice img:hover {
@@ -43,7 +54,7 @@ body {
   border: 4px solid hotpink;
 }
 
-#case58 {
+#case59 {
   border: 4px solid cyan;
 }
 
@@ -68,11 +79,28 @@ img {
   text-align: center;
   margin-right: 5px;
   color: white;
+  width: 220px;
+  height: 656px;
+  overflow: hidden;
 }
 
 span {
-  color: red;
+  color: hotpink;
 }
+
+#gif {
+  height: 40px;
+  width: 236px;
+}
+
+#number {
+  display: flex;
+  justify-content: center;
+  margin-top: -20px;
+  font-size: 18px;
+  text-shadow: 3px 3px #1515ea;
+}
+
 #resultDice {
   padding: 10px 0;
 }
@@ -84,6 +112,7 @@ span {
 }
 .container {
   display: flex;
+  margin-bottom: 20px;
 }
 #resultDice {
   text-align: center;
@@ -99,16 +128,10 @@ span {
   margin: 2px 0;
 }
 
+#message {
+width: 100%;
+}
+
 #case {
   border: solid lime 4px;
 }
-
-/*#case1, #case2, #case3, #case4, #case5, #case6, #case7, #case8 {
-  border-top: solid red 10px;
-}
-
-#case9, #case, #case, #case, #case, #case, #case, #case13, #case, #case {
-  border-left: solid red 10px;*/
-}
-
-#case9, #case, #case, #case, #case, #case, #case, #case, #case, #case
